2006-04-17 [colin]	2.1.1cvs3

	* src/imap.c
		Faster flag search when there are new mails 
		in a folder. We can do a full search if the 
		folder contains less messages than the new
		list.

2006-04-17 [colin]	2.1.1cvs2

	* po/cs.po
	* po/de.po
	* po/fr.po
	* po/nl.po
	* po/pt_BR.po
		Update translations from stable branch

2006-04-17 [colin]	2.1.1cvs1

	* configure.ac
		Bump version to follow stable release

2006-04-16 [mones]	2.1.0cvs50

	* po/es.po
		Updated for release

2006-04-16 [colin]	2.1.0cvs49

	* src/textview.c
		Fix bgcolor not unset on gtk 2.8, while preventing warnings 
		with gtk < 2.8. Thanks to Fabien Vantard.

2006-04-15 [colin]	2.1.0cvs48

	* src/etpan/imap-thread.c
		Fix bug #919 (libetpan: SEGV when connecting 
		using command)

2006-04-14 [colin]	2.1.0cvs47

	* src/main.c
		Fix race on --select (should be done better)

2006-04-14 [wwp]	2.1.0cvs46

	* src/send_message.c
		enforce a check for domain in account prefs (a sending
		error could be faced if domain was checked but no value set),
		thanks to Colin.

2006-04-14 [colin]	2.1.0cvs45

	* src/codeconv.c
		when converting from unknown to unknown, if the
		string is UTF8, don't convert it to the locale
		(which breaks it)

2006-04-14 [colin]	2.1.0cvs44

	* src/compose.c
		Don't try to use ASCII for converting headers
		(as done in body)

2006-04-14 [paul]	2.1.0cvs43

	* src/crash.c
		add locale/charset info to crash report
	* src/gtk/about.c
		add wwp to doc team
		replace 'e-mail' with preferred 'email'
	* src/gtk/authors.h
		ensure contributors list is in alphabetical
		order

2006-04-13 [colin]	2.1.0cvs42

	* src/textview.c
		Prevent gdk warnings

2006-04-13 [colin]	2.1.0cvs41

	* src/common/ssl_certificate.c
	* src/common/ssl_certificate.h
	* src/gtk/sslcertwindow.c
		Warn on expired certs, and display the expiration date

2006-04-13 [colin]	2.1.0cvs40

	* src/plugins/spamassassin/spamassassin_gtk.c
		Fix missing set_text on unix socket

2006-04-13 [wwp]	2.1.0cvs39
