@@ -1425,3 +1425,4 @@
 ( cvs diff -u -r 1.654.2.1467 -r 1.654.2.1468 configure.ac;  ) > 2.1.1cvs1.patchset
 ( cvs diff -u -r 1.9.2.4 -r 1.9.2.5 po/cs.po;  cvs diff -u -r 1.58.2.20 -r 1.58.2.21 po/de.po;  cvs diff -u -r 1.42.2.22 -r 1.42.2.23 po/fr.po;  cvs diff -u -r 1.28.2.5 -r 1.28.2.6 po/nl.po;  cvs diff -u -r 1.50.2.16 -r 1.50.2.17 po/pt_BR.po;  ) > 2.1.1cvs2.patchset
 ( cvs diff -u -r 1.179.2.99 -r 1.179.2.100 src/imap.c;  ) > 2.1.1cvs3.patchset
+( cvs diff -u -r 1.179.2.100 -r 1.179.2.101 src/imap.c;  ) > 2.1.1cvs4.patchset
